# AgentShelf

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTFOLIO_NOTES.md  PRODUCT_GOAL.md  README.md  SECURITY.md  STATUS.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  merchant_adoption.yml
.github/workflows/: agentshelf-artifacts.yml  ci.yml
benchmarks/expected/: contradictory_schema_page.json  headless_profile_state_page.json  js_rendered_placeholder_page.json  jsonld_only_page.json  missing_policy_page.json  newsletter_subscribe_single_sku_page.json  profile_rule_gap_product.json  return_policy_link_only_page.json  shopify_profile_variant_page.json  strong_static_product.json  variant_heavy_apparel_page.json  visible_content_only_page.json  weak_landing_page.json  woocommerce_profile_variable_page.json
benchmarks/fixtures/: contradictory_schema_page.html  js_rendered_placeholder_page.html  jsonld_only_page.html  missing_policy_page.html  newsletter_subscribe_single_sku_page.html  profile_rule_gap_product.html  return_policy_link_only_page.html  shopify_profile_variant_page.html  strong_static_product.html  variant_heavy_apparel_page.html  visible_content_only_page.html  (+2 more)
docs/: AGENT_IMPLEMENTATION_LOOP.md  ARCHITECTURE.md  DOGFOODING.md  MERCHANT_ADOPTION.md  PLATFORM_ADOPTION.md  PROFILE_BENCHMARKS.md  PUBLIC_RELEASE_AUDIT.md  RELEASING.md  dogfood-artist-store.md  geo-skill.md  store-level-audit.md
examples/: agentshelf.config.json  artist_store_product.html  calibration-labels.json  codex_agent_loop_after.html  draft-calibration-labels.json  headless-catalog.json  headless_product_state.html  js_product_raw.html  js_product_rendered.html  sample_product_page.html  shopify-products.json  shopify_variant_product.html  storefront-products.json  weak_product_page.html  woocommerce-products.csv  woocommerce_variable_product.html
outputs/: sample_report.md
schemas/: agentshelf.geo_audit.v0.schema.json  agentshelf.geo_task.v0.schema.json  agentshelf.store_geo_audit.v0.schema.json
tests/: test_cli.py  test_engine.py  test_geo.py  test_store_geo.py  test_workflows.py
(+41 files in other folders)
