[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshelf"
version = "0.7.0"
description = "Open-source product page audits for AI shopping agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alix" }]
keywords = ["agentic-commerce", "ecommerce", "ai-agents", "auditing", "shopify"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
render = ["playwright>=1.44"]

[project.scripts]
agentshelf = "agentshelf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
