[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshelf"
version = "0.32.0"
description = "Open-source GEO and product page audits for AI-readable commerce."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alix" }]
keywords = ["agentic-commerce", "geo", "ecommerce", "ai-agents", "auditing", "shopify"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
render = ["playwright>=1.44"]

[project.scripts]
agentshelf = "agentshelf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentshelf = [
  "skills/agentshelf-geo/SKILL.md",
  "skills/agentshelf-geo/agents/*.yaml",
  "skills/agentshelf-geo/references/*.md",
  "templates/merchant-repo/*.json",
  "templates/merchant-repo/docs/*.md",
  "templates/merchant-repo/snapshots/*.html",
  "templates/merchant-repo/workflows/*.yml",
]
